fixed the little spacing bug on the mailchimp tag

--- a/src/less/site/_banner.less
+++ b/src/less/site/_banner.less
@@ -144,7 +144,7 @@
       content: '';
       display: block;
       position: absolute;
-      right: -12.5px;
+      right: -12px;
       width: 0;
       height: 0;
       top: 0;
@@ -157,7 +157,7 @@
       content: '';
       display: block;
       position: absolute;
-      right: -12.5px;
+      right: -12px;
       width: 0;
       height: 0;
       bottom: 0;
